--- a/.github/workflows/Manual_Publish_Docker.yml
+++ b/.github/workflows/Manual_Publish_Docker.yml
@@ -14,24 +14,24 @@ jobs:
         run: echo "::set-output name=version::$(cat VERSION)"
 
       - name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
+        uses: docker/setup-qemu-action@v2
         with:
           image: tonistiigi/binfmt:latest
           platforms: arm64,arm
 
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
+        uses: docker/setup-buildx-action@v2
 
       - name: Login to DockerHub
-        uses: docker/login-action@v1
+        uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Build and push
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v4
         with:
           context: .
           platforms: linux/amd64,linux/arm64,linux/arm/v7
           push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/streammaster:latest,${{ secrets.DOCKER_USERNAME }}/xstreammasterteve:${{ steps.getversion.outputs.version }}
+          tags: ${{ secrets.DOCKER_USERNAME }}/streammaster:latest,${{ secrets.DOCKER_USERNAME }}/streammaster:${{ steps.getversion.outputs.version }}
