--- a/.github/workflows/Manual_Publish_Docker.yml
+++ b/.github/workflows/Manual_Publish_Docker.yml
@@ -5,28 +5,38 @@ on:
 jobs:
   build_docker_and_publish:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
+      # This is used to complete the identity challenge
+      # with sigstore/fulcio when running outside of PRs.
+      id-token: write
+
     steps:
-      - name: Clone repository
-        uses: actions/checkout@v2
+      - name: Checkout Repository
+        uses: actions/checkout@v3
 
       - name: Read VERSION file
         id: getversion
         run: echo "::set-env name=version::$(cat VERSION)"
 
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v2
-        with:
-          image: tonistiigi/binfmt:latest
-          platforms: arm64,arm
-
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
-      - name: Login to DockerHub
+      - name: Login to Docker Hub
+        if: github.event_name != 'pull_request'
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Get Git Tag
+        id: git_tag
+        run: echo ::set-output name=TAG::$(git describe --tags --abbrev=0)
+
+      - name: Git Version
+        id: version
+        uses: codacy/git-version@2.7.1
 
       - name: Build and push
         uses: docker/build-push-action@v4
@@ -34,4 +44,4 @@ jobs:
           context: .
           platforms: linux/amd64,linux/arm64,linux/arm/v7
           push: true
-          tags: senexcrenshaw/streammaster:latest,senexcrenshaw/streammaster:${{ env.version }}
+          tags: senexcrenshaw/streammaster:latest,senexcrenshaw/streammaster:${{ steps.git_tag.outputs.TAG }}
