--- a/.github/workflows/Manual_Publish_Docker.yml
+++ b/.github/workflows/Manual_Publish_Docker.yml
@@ -15,6 +15,16 @@ jobs:
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+
+      - name: Install GitVersion
+        uses: gittools/actions/gitversion/setup@v0
+        with:
+          versionSpec: "5.x"
+
+      - name: Determine Version
+        uses: gittools/actions/gitversion/execute@v0
 
       - name: Git Version
         uses: codacy/git-version@2.5.4
