--- a/.github/workflows/Manual_Publish_Docker.yml
+++ b/.github/workflows/Manual_Publish_Docker.yml
@@ -23,51 +23,10 @@ jobs:
         with:
           versionSpec: "5.x"
 
-      - name: Display GitVersion config
-        uses: gittools/actions/gitversion/execute@v0
-        with:
-          useConfigFile: true
-          additionalArguments: "/showConfig"
-
       - name: Determine Version
         uses: gittools/actions/gitversion/execute@v0
         with:
           useConfigFile: true
-
-      - name: Display GitVersion variables (without prefix)
-        run: |
-          echo "Major: ${{ env.major }}"
-          echo "Minor: ${{ env.minor }}"
-          echo "Patch: ${{ env.patch }}"
-          echo "PreReleaseTag: ${{ env.preReleaseTag }}"
-          echo "PreReleaseTagWithDash: ${{ env.preReleaseTagWithDash }}"
-          echo "PreReleaseLabel: ${{ env.preReleaseLabel }}"
-          echo "PreReleaseNumber: ${{ env.preReleaseNumber }}"
-          echo "WeightedPreReleaseNumber: ${{ env.weightedPreReleaseNumber }}"
-          echo "BuildMetaData: ${{ env.buildMetaData }}"
-          echo "BuildMetaDataPadded: ${{ env.buildMetaDataPadded }}"
-          echo "FullBuildMetaData: ${{ env.fullBuildMetaData }}"
-          echo "MajorMinorPatch: ${{ env.majorMinorPatch }}"
-          echo "SemVer: ${{ env.semVer }}"
-          echo "LegacySemVer: ${{ env.legacySemVer }}"
-          echo "LegacySemVerPadded: ${{ env.legacySemVerPadded }}"
-          echo "AssemblySemVer: ${{ env.assemblySemVer }}"
-          echo "AssemblySemFileVer: ${{ env.assemblySemFileVer }}"
-          echo "FullSemVer: ${{ env.fullSemVer }}"
-          echo "InformationalVersion: ${{ env.informationalVersion }}"
-          echo "BranchName: ${{ env.branchName }}"
-          echo "EscapedBranchName: ${{ env.escapedBranchName }}"
-          echo "Sha: ${{ env.sha }}"
-          echo "ShortSha: ${{ env.shortSha }}"
-          echo "NuGetVersionV2: ${{ env.nuGetVersionV2 }}"
-          echo "NuGetVersion: ${{ env.nuGetVersion }}"
-          echo "NuGetPreReleaseTagV2: ${{ env.nuGetPreReleaseTagV2 }}"
-          echo "NuGetPreReleaseTag: ${{ env.nuGetPreReleaseTag }}"
-          echo "VersionSourceSha: ${{ env.versionSourceSha }}"
-          echo "CommitsSinceVersionSource: ${{ env.commitsSinceVersionSource }}"
-          echo "CommitsSinceVersionSourcePadded: ${{ env.commitsSinceVersionSourcePadded }}"
-          echo "UncommittedChanges: ${{ env.uncommittedChanges }}"
-          echo "CommitDate: ${{ env.commitDate }}"
 
       - name: Display GitVersion variables (with prefix)
         run: |
@@ -114,35 +73,6 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Git Version
-        id: version
-        uses: codacy/git-version@2.7.1
-
-      - name: Dump GitHub context
-        env:
-          GITHUB_CONTEXT: ${{ toJson(github) }}
-        run: echo "$GITHUB_CONTEXT"
-      - name: Dump job context
-        env:
-          JOB_CONTEXT: ${{ toJson(job) }}
-        run: echo "$JOB_CONTEXT"
-      - name: Dump steps context
-        env:
-          STEPS_CONTEXT: ${{ toJson(steps) }}
-        run: echo "$STEPS_CONTEXT"
-      - name: Dump runner context
-        env:
-          RUNNER_CONTEXT: ${{ toJson(runner) }}
-        run: echo "$RUNNER_CONTEXT"
-      - name: Dump strategy context
-        env:
-          STRATEGY_CONTEXT: ${{ toJson(strategy) }}
-        run: echo "$STRATEGY_CONTEXT"
-      - name: Dump matrix context
-        env:
-          MATRIX_CONTEXT: ${{ toJson(matrix) }}
-        run: echo "$MATRIX_CONTEXT"
-
       - name: Show default environment variables
         run: |
           echo "The job_id is: $GITHUB_JOB"   # reference the default environment variables
@@ -157,4 +87,4 @@ jobs:
           context: .
           platforms: linux/amd64,linux/arm64,linux/arm/v7
           push: true
-          tags: senexcrenshaw/streammaster:latest,senexcrenshaw/streammaster:${{ steps.git_tag.outputs.TAG }}
+          tags: senexcrenshaw/streammaster:latest,senexcrenshaw/streammaster:${{ env.GitVersion_SemVer }},senexcrenshaw/streammaster:${{ env.GitVersion_FullSemVer }}
