--- a/.github/workflows/Manual_Publish_Docker.yml
+++ b/.github/workflows/Manual_Publish_Docker.yml
@@ -137,6 +137,7 @@ jobs:
         uses: docker/metadata-action@v4
         with:
           images: ${{ env.REGISTRY_IMAGE }}
+          tags: type=semver,pattern= ${{ env.GitVersion_SemVer }}
 
       - name: Login to Docker Hub
         uses: docker/login-action@v2
