--- a/.github/workflows/Manual_Publish_Docker.yml
+++ b/.github/workflows/Manual_Publish_Docker.yml
@@ -37,7 +37,7 @@ jobs:
         uses: docker/metadata-action@v4
         with:
           images: ${{ env.REGISTRY_IMAGE }}
-          tags: type=semver,pattern= ${{ env.GitVersion_SemVer }}
+          tags: type=semver,pattern={{version}},value=${{ env.GitVersion_SemVer }}
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
@@ -137,7 +137,7 @@ jobs:
         uses: docker/metadata-action@v4
         with:
           images: ${{ env.REGISTRY_IMAGE }}
-          tags: type=semver,pattern= ${{ env.GitVersion_SemVer }}
+          tags: type=semver,pattern={{version}},value=${{ env.GitVersion_SemVer }}
 
       - name: Login to Docker Hub
         uses: docker/login-action@v2
