--- a/.github/workflows/Manual_Publish_Docker.yml
+++ b/.github/workflows/Manual_Publish_Docker.yml
@@ -37,7 +37,10 @@ jobs:
         uses: docker/metadata-action@v4
         with:
           images: ${{ env.REGISTRY_IMAGE }}
-          tags: type=semver,pattern={{version}},value=${{ env.GitVersion_SemVer }}
+          tags: |
+            latest
+            ${{ env.GitVersion_SemVer }}
+            ${{ env.GitVersion_FullSemVer }}
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
@@ -137,7 +140,10 @@ jobs:
         uses: docker/metadata-action@v4
         with:
           images: ${{ env.REGISTRY_IMAGE }}
-          tags: type=semver,pattern={{version}},value=${{ env.GitVersion_SemVer }}
+          tags: |
+            latest
+            ${{ env.GitVersion_SemVer }}
+            ${{ env.GitVersion_FullSemVer }}
 
       - name: Login to Docker Hub
         uses: docker/login-action@v2
