--- a/.github/workflows/Manual_Publish_Docker.yml
+++ b/.github/workflows/Manual_Publish_Docker.yml
@@ -37,6 +37,9 @@ jobs:
         uses: docker/metadata-action@v4
         with:
           images: ${{ env.REGISTRY_IMAGE }}
+          labels: |
+            org.opencontainers.image.description="Dockerized Stream Master by SenexCrenshaw
+            org.opencontainers.image.version= ${{ env.GitVersion_FullSemVer }}
           tags: |
             latest
             ${{ env.GitVersion_SemVer }}
