--- a/.github/workflows/Manual_Publish_Docker.yml
+++ b/.github/workflows/Manual_Publish_Docker.yml
@@ -2,9 +2,11 @@ name: Manual Publish Docker
 on:
   workflow_dispatch:
 
+permissions:
+  contents: read
+
 env:
   REGISTRY_IMAGE: senexcrenshaw/streammaster
-  GitVersion_SemVer: 1
 
 jobs:
   build:
@@ -42,8 +44,6 @@ jobs:
             org.opencontainers.image.description=Another description
             org.opencontainers.image.version= ${{ env.GitVersion_FullSemVer }}
           tags: |
-            latest
-            ${{ env.GitVersion_SemVer }}
             ${{ env.GitVersion_FullSemVer }}
 
       - name: Set up QEMU
@@ -53,46 +53,10 @@ jobs:
         uses: docker/setup-buildx-action@v2
 
       - name: Login to Docker Hub
-        if: github.event_name != 'pull_request'
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-      - name: Display GitVersion variables (with prefix)
-        run: |
-          echo "Major: ${{ env.GitVersion_Major }}"
-          echo "Minor: ${{ env.GitVersion_Minor }}"
-          echo "Patch: ${{ env.GitVersion_Patch }}"
-          echo "PreReleaseTag: ${{ env.GitVersion_PreReleaseTag }}"
-          echo "PreReleaseTagWithDash: ${{ env.GitVersion_PreReleaseTagWithDash }}"
-          echo "PreReleaseLabel: ${{ env.GitVersion_PreReleaseLabel }}"
-          echo "PreReleaseNumber: ${{ env.GitVersion_PreReleaseNumber }}"
-          echo "WeightedPreReleaseNumber: ${{ env.GitVersion_WeightedPreReleaseNumber }}"
-          echo "BuildMetaData: ${{ env.GitVersion_BuildMetaData }}"
-          echo "BuildMetaDataPadded: ${{ env.GitVersion_BuildMetaDataPadded }}"
-          echo "FullBuildMetaData: ${{ env.GitVersion_FullBuildMetaData }}"
-          echo "MajorMinorPatch: ${{ env.GitVersion_MajorMinorPatch }}"
-          echo "SemVer: ${{ env.GitVersion_SemVer }}"
-          echo "LegacySemVer: ${{ env.GitVersion_LegacySemVer }}"
-          echo "LegacySemVerPadded: ${{ env.GitVersion_LegacySemVerPadded }}"
-          echo "AssemblySemVer: ${{ env.GitVersion_AssemblySemVer }}"
-          echo "AssemblySemFileVer: ${{ env.GitVersion_AssemblySemFileVer }}"
-          echo "FullSemVer: ${{ env.GitVersion_FullSemVer }}"
-          echo "InformationalVersion: ${{ env.GitVersion_InformationalVersion }}"
-          echo "BranchName: ${{ env.GitVersion_BranchName }}"
-          echo "EscapedBranchName: ${{ env.GitVersion_EscapedBranchName }}"
-          echo "Sha: ${{ env.GitVersion_Sha }}"
-          echo "ShortSha: ${{ env.GitVersion_ShortSha }}"
-          echo "NuGetVersionV2: ${{ env.GitVersion_NuGetVersionV2 }}"
-          echo "NuGetVersion: ${{ env.GitVersion_NuGetVersion }}"
-          echo "NuGetPreReleaseTagV2: ${{ env.GitVersion_NuGetPreReleaseTagV2 }}"
-          echo "NuGetPreReleaseTag: ${{ env.GitVersion_NuGetPreReleaseTag }}"
-          echo "VersionSourceSha: ${{ env.GitVersion_VersionSourceSha }}"
-          echo "CommitsSinceVersionSource: ${{ env.GitVersion_CommitsSinceVersionSource }}"
-          echo "CommitsSinceVersionSourcePadded: ${{ env.GitVersion_CommitsSinceVersionSourcePadded }}"
-          echo "UncommittedChanges: ${{ env.GitVersion_UncommittedChanges }}"
-          echo "CommitDate: ${{ env.GitVersion_CommitDate }}"
 
       - name: Build and push by digest
         id: build
@@ -143,12 +107,7 @@ jobs:
           name: digests
           path: /tmp/digests
 
-      - name: Show default environment variables
-        run: |
-          echo "DOCKER_METADATA_OUTPUT_JSON: $DOCKER_METADATA_OUTPUT_JSON"
-          echo "DOCKER_METADATA_OUTPUT_JSON: $(jq -cr '.tags | map("-t " + .) | join(" ")' <<< "$DOCKER_METADATA_OUTPUT_JSON")"
-
-      - name: Display GitVersion variables (with prefix)
+      - name: Display GitVersion variables
         run: |
           echo "Major: ${{ env.GitVersion_Major }}"
           echo "Minor: ${{ env.GitVersion_Minor }}"
@@ -192,8 +151,6 @@ jobs:
         with:
           images: ${{ env.REGISTRY_IMAGE }}
           tags: |
-            latest
-            ${{ env.GitVersion_SemVer }}
             ${{ env.GitVersion_FullSemVer }}
 
       - name: Login to Docker Hub
@@ -202,11 +159,10 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Create manifest list and push
+      - name: Build and Push Image
         working-directory: /tmp/digests
         run: |
-          docker buildx imagetools create $(jq -cr '.tags | map("-t " + .) | join(" ")' <<< "$DOCKER_METADATA_OUTPUT_JSON") \
-            $(printf '${{ env.REGISTRY_IMAGE }}@sha256:%s ' *)
+          docker buildx imagetools create $(printf '${{ env.REGISTRY_IMAGE }}@sha256:%s ' *)
 
       - name: Inspect image
         run: |
