🚀 feat(Nightly_Publish_Docker.yml): add nightly tag to Docker image The nightly tag is added to the Docker image to differentiate it from other builds. This allows users to easily identify and use the nightly build of the application.

--- a/.github/workflows/Nightly_Publish_Docker.yml
+++ b/.github/workflows/Nightly_Publish_Docker.yml
@@ -44,6 +44,7 @@ jobs:
           labels: |
             org.opencontainers.image.version= ${{ env.GitVersion_FullSemVer }}
           tags: |
+            nightly
             ${{ env.GitVersion_FullSemVer }}
 
       - name: Set up QEMU
@@ -153,6 +154,7 @@ jobs:
           labels: |
             org.opencontainers.image.version= ${{ env.GitVersion_FullSemVer }}
           tags: |
+            nightly
             ${{ env.GitVersion_FullSemVer }}
 
       - name: Login to Docker Hub
