--- a/.github/workflows/Tag_Push.yml
+++ b/.github/workflows/Tag_Push.yml
@@ -112,7 +112,7 @@ jobs:
       - name: Build and Push Image
         working-directory: /tmp/digests
         run: |
-          docker buildx imagetools create $(printf '${{ env.REGISTRY_IMAGE }}@sha256:%s ' *)
+          docker buildx imagetools create -t nightly -t  ${{ env.GitVersion_FullSemVer }}  $(printf '${{ env.REGISTRY_IMAGE }}@sha256:%s ' *)
 
       - name: Inspect image
         run: |
