--- a/.github/workflows/Nightly_Publish_Docker.yml
+++ b/.github/workflows/Nightly_Publish_Docker.yml
@@ -42,10 +42,10 @@ jobs:
         with:
           images: ${{ env.REGISTRY_IMAGE }}
           labels: |
-            org.opencontainers.image.version= ${{ env.GitVersion_FullSemVer }}
+            org.opencontainers.image.version= ${{ env.GitVersion_SemVer }}-${{ env.GitVersion_SemVer }}
           tags: |
             nightly
-            ${{ env.GitVersion_FullSemVer }}
+            ${{ env.GitVersion_SemVer }}-${{ env.GitVersion_SemVer }}
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
@@ -68,7 +68,7 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
           tags: |
             nightly
-            ${{ env.GitVersion_FullSemVer }}
+            ${{ env.GitVersion_SemVer }}
           outputs: type=image,name=${{ env.REGISTRY_IMAGE }},push-by-digest=true,name-canonical=true,push=true
 
       - name: Export digest
@@ -130,7 +130,7 @@ jobs:
           echo "LegacySemVerPadded: ${{ env.GitVersion_LegacySemVerPadded }}"
           echo "AssemblySemVer: ${{ env.GitVersion_AssemblySemVer }}"
           echo "AssemblySemFileVer: ${{ env.GitVersion_AssemblySemFileVer }}"
-          echo "FullSemVer: ${{ env.GitVersion_FullSemVer }}"
+          echo "FullSemVer: ${{ env.GitVersion_SemVer }}"
           echo "InformationalVersion: ${{ env.GitVersion_InformationalVersion }}"
           echo "BranchName: ${{ env.GitVersion_BranchName }}"
           echo "EscapedBranchName: ${{ env.GitVersion_EscapedBranchName }}"
@@ -156,10 +156,10 @@ jobs:
           images: ${{ env.REGISTRY_IMAGE }}
           labels: |
             org.opencontainers.image.description=Stream Master Docker Image
-            org.opencontainers.image.version= ${{ env.GitVersion_FullSemVer }}
+            org.opencontainers.image.version= ${{ env.GitVersion_SemVer }}-${{ env.GitVersion_SemVer }}
           tags: |
             nightly
-            ${{ env.GitVersion_FullSemVer }}
+            ${{ env.GitVersion_SemVer }}-${{ env.GitVersion_SemVer }}
 
       - name: Login to Docker Hub
         uses: docker/login-action@v2
