🔥 chore(workflows): remove 'nightly' tag from docker image The 'nightly' tag was removed from the docker image tags in the 'Nightly_Publish_Docker.yml' workflow. The 'Manual_Publish_Docker.yml' workflow was also updated to use the 'FullSemVer' environment variable instead of concatenating 'SemVer' and 'BuildMetaDataPadded' variables. This change improves the consistency of the versioning scheme and simplifies the workflow.

--- a/.github/workflows/Manual_Publish_Docker.yml
+++ b/.github/workflows/Manual_Publish_Docker.yml
@@ -123,7 +123,7 @@ jobs:
           echo "LegacySemVerPadded: ${{ env.GitVersion_LegacySemVerPadded }}"
           echo "AssemblySemVer: ${{ env.GitVersion_AssemblySemVer }}"
           echo "AssemblySemFileVer: ${{ env.GitVersion_AssemblySemFileVer }}"
-          echo "FullSemVer:  ${{ env.GitVersion_SemVer }}-${{ env.GitVersion_BuildMetaDataPadded }}"
+          echo "FullSemVer: ${{ env.GitVersion_FullSemVer }}"
           echo "InformationalVersion: ${{ env.GitVersion_InformationalVersion }}"
           echo "BranchName: ${{ env.GitVersion_BranchName }}"
           echo "EscapedBranchName: ${{ env.GitVersion_EscapedBranchName }}"
