--- a/.github/workflows/Nightly_Publish_Docker.yml
+++ b/.github/workflows/Nightly_Publish_Docker.yml
@@ -1,4 +1,4 @@
-name: Publish Nightly
+name: Publish
 on:
   push:
     branches: [main]
@@ -44,7 +44,6 @@ jobs:
           labels: |
             org.opencontainers.image.version=${{ env.GitVersion_SemVer }}-${{ env.GitVersion_BuildMetaDataPadded }}
           tags: |
-            nightly
             ${{ env.GitVersion_SemVer }}-${{ env.GitVersion_BuildMetaDataPadded }}
 
       - name: Set up QEMU
@@ -66,9 +65,6 @@ jobs:
           context: .
           platforms: ${{ matrix.platform }}
           labels: ${{ steps.meta.outputs.labels }}
-          tags: |
-            nightly
-            ${{ env.GitVersion_SemVer }}-${{ env.GitVersion_BuildMetaDataPadded }}
           outputs: type=image,name=${{ env.REGISTRY_IMAGE }},push-by-digest=true,name-canonical=true,push=true
 
       - name: Export digest
@@ -158,8 +154,7 @@ jobs:
             org.opencontainers.image.description=Stream Master Docker Image
             org.opencontainers.image.version=${{ env.GitVersion_SemVer }}-${{ env.GitVersion_BuildMetaDataPadded }}
           tags: |
-            nightly
-             ${{ env.GitVersion_SemVer }}-${{ env.GitVersion_BuildMetaDataPadded }}
+            ${{ env.GitVersion_SemVer }}-${{ env.GitVersion_BuildMetaDataPadded }}
 
       - name: Login to Docker Hub
         uses: docker/login-action@v2
