🚀 chore: add bug report, feature request, and config issue templates Added issue templates for bug reports, feature requests, and a config file. The bug report template includes a clear and concise description of the bug, the Stream Master version number, and a link to relevant logs. The feature request template includes a description of the problem, the desired solution, and any alternative solutions considered. The config file template includes a link to the Discord server for support issues.
🚀 chore: update README with new Discord server link
Updated the README file with the new Discord server link.

--- a/.github/workflows/Tag_Push.yml
+++ b/.github/workflows/Tag_Push.yml
@@ -39,6 +39,7 @@ jobs:
         with:
           images: ${{ env.REGISTRY_IMAGE }}
           tags: |
+            latest
             type=semver,pattern={{version}}
 
       - name: Set up QEMU
@@ -101,6 +102,7 @@ jobs:
         with:
           images: ${{ env.REGISTRY_IMAGE }}
           tags: |
+            latest
             type=semver,pattern={{version}}
 
       - name: Login to Docker Hub
