--- a/.github/workflows/Nightly_Publish_Docker.yml
+++ b/.github/workflows/Nightly_Publish_Docker.yml
@@ -1,7 +1,7 @@
 name: Publish
 on:
-  push:
-    branches: [main]
+  schedule:
+    - cron: "0 0 * * *"
 
 permissions:
   contents: read
@@ -45,7 +45,6 @@ jobs:
             org.opencontainers.image.version=${{ env.GitVersion_SemVer }}-${{ env.GitVersion_BuildMetaDataPadded }}
           tags: |
             nightly
-            ${{ env.GitVersion_SemVer }}-${{ env.GitVersion_BuildMetaDataPadded }}
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
@@ -156,7 +155,6 @@ jobs:
             org.opencontainers.image.version=${{ env.GitVersion_SemVer }}-${{ env.GitVersion_BuildMetaDataPadded }}
           tags: |
             nightly
-            ${{ env.GitVersion_SemVer }}-${{ env.GitVersion_BuildMetaDataPadded }}
 
       - name: Login to Docker Hub
         uses: docker/login-action@v2
