--- a/streammasterwebui/tsconfig.json
+++ b/streammasterwebui/tsconfig.json
@@ -26,6 +26,7 @@
     "noPropertyAccessFromIndexSignature": false,
     "noImplicitReturns": true,
     "noEmit": true,
+     "types": ["vidstack/globals"],
     // "types": [
     //   "primefaces"
     // ],
