--- a/streammasterwebui/.vscode/settings.json
+++ b/streammasterwebui/.vscode/settings.json
@@ -31,6 +31,7 @@
     "typescriptreact",
     "yaml"
   ],
+  "html.customData": ["./node_modules/vidstack/vscode.html-data.json"]
   // "eslint.trace.server": "verbose",
   // "eslint.debug": "true"
 }
