--- a/streammasterwebui/package.json
+++ b/streammasterwebui/package.json
@@ -22,7 +22,6 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^29.5.2",
     "@types/node": "^18.16.16",
     "@types/react-dom": "^18.2.4",
     "@types/react-redux": "^7.1.25",
@@ -33,6 +32,7 @@
     "history": "^5.3.0",
     "import": "^0.0.6",
     "normalize.css": "^8.0.1",
+    "planby": "^1.1.4",
     "postcss-svgo": "^5.1.0",
     "primeflex": "^3.3.1",
     "primeicons": "^6.0.1",
