🐛 fix(Binary_Release.yml): update path to binaries in artifact upload step The path to the binaries was incorrect and has been updated to the correct path. This ensures that the binaries are correctly uploaded as artifacts.

--- a/.github/workflows/Binary_Release.yml
+++ b/.github/workflows/Binary_Release.yml
@@ -20,4 +20,4 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: Binaries
-          path: $HOME/publish
+          path: $HOME/src/publish
