🐛 fix(release-drafter.yml): change version-resolver labels for major and minor to "breaking" instead of "patch" ✨ feat(release-drafter.yml): change name-template and tag-template to use $RESOLVED_VERSION instead of $PATCH The version-resolver labels for major and minor were incorrectly set to "patch" instead of "breaking". This has been fixed to accurately reflect the type of change. Additionally, the name-template and tag-template have been updated to use the $RESOLVED_VERSION variable instead of $PATCH to improve clarity and consistency.

--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -1,5 +1,5 @@
-name-template: "v$PATCH 👍"
-tag-template: "v$PATCH"
+name-template: "v$RESOLVED_VERSION 👍"
+tag-template: "v$RESOLVED_VERSION"
 categories:
   - title: "🚀 Features"
     labels:
@@ -17,10 +17,10 @@ change-title-escapes: '\<*_&' # You can add # and @ to disable mentions, and add
 version-resolver:
   major:
     labels:
-      - "major"
+      - "patch"
   minor:
     labels:
-      - "minor"
+      - "patch"
   patch:
     labels:
       - "patch"
