🔖 chore(release-drafter.yml): update name and tag templates to use NEXT_PATCH_VERSION instead of RESOLVED_VERSION The name and tag templates have been updated to use the NEXT_PATCH_VERSION variable instead of the RESOLVED_VERSION variable. This change was made to improve consistency with the naming conventions used in the project.

--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -1,5 +1,5 @@
-name-template: "v$RESOLVED_VERSION 👍"
-tag-template: "v$RESOLVED_VERSION"
+name-template: "v$NEXT_PATCH_VERSION 👍"
+tag-template: "v$NEXT_PATCH_VERSION"
 categories:
   - title: "🚀 Features"
     labels:
